# miniflux-filter

./: .dockerignore  .env.dist  .envrc  .gitignore  Cargo.toml  Dockerfile  README.md  devbox.json  renovate.json
.github/workflows/: build.yml
filter-core/: Cargo.toml
filter-core/src/: api.rs  config.rs  filter.rs  lib.rs  rules.rs
filter-web/: Cargo.toml
filter-web/src/: lib.rs  logging.rs  web.rs
filter-web/static/: app.js  edit.html  edit.js  index.html  style.css
filter-web/static/lib/: api.js
miniflux-filter/: Cargo.toml
miniflux-filter/src/: cli.rs  main.rs
tests/: package.json  playwright.config.js
tests/e2e/: dashboard.spec.js  edit-rules.spec.js  onclick-bug.spec.js
