[workspace]
resolver = "3"
members = [
    "filter-core",
    "filter-web",
    "miniflux-filter"
]

[workspace.dependencies]
# Shared dependencies across workspace
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# HTTP and networking
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }

# Configuration and parsing
clap = { version = "4.4", features = ["derive", "env"] }
toml = "0.9"
regex = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Test dependencies (available to all crates)
tempfile = "3.8"
