[package]
name = "filter-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }