[package]
name = "filter-web"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
toml = { workspace = true }

# Local dependencies
filter-core = { path = "../filter-core" }

[dev-dependencies]
tempfile = { workspace = true }